--- a/index2.html
+++ b/index2.html
@@ -40,3 +40,4 @@
 <svg class="chart"></svg>
 <script src="d31.js"></script>
 <script src="bubble.js" charset="utf-8"></script>
+<script src="https://d3js.org/d3-color.v1.min.js"></script>
